content/cli/v7/commands/npm-pack.mdx
---
title: npm-pack
section: 1
description: Create a tarball from a package
github_repo: npm/cli
github_branch: release/v7
github_path: docs/content/commands/npm-pack.md
redirect_from:
  - /cli-documentation/v7/cli-commands/npm-pack
  - /cli-documentation/v7/cli-commands/pack
  - /cli-documentation/v7/commands/npm-pack
  - /cli-documentation/v7/commands/pack
  - /cli-documentation/v7/npm-pack
  - /cli-documentation/v7/pack
  - /cli/v7/cli-commands/npm-pack
  - /cli/v7/cli-commands/pack
  - /cli/v7/commands/pack
  - /cli/v7/npm-pack
  - /cli/v7/pack
---

### Synopsis

```bash
npm pack [[<@scope>/]<pkg>...] [--dry-run] [--json]
```

### Configuration


#### `dry-run`

- Default: false
- Type: Boolean

Indicates that you don't want npm to make any changes and that it should only report what it would have done. This can be passed into any of the commands that modify your local installation, eg, `install`, `update`, `dedupe`, `uninstall`, as well as `pack` and `publish`.

Note: This is NOT honored by other network related commands, eg `dist-tags`, `owner`, etc.


#### `json`

- Default: false
- Type: Boolean

Whether or not to output JSON data, rather than the normal output.

- In `npm pkg set` it enables parsing set values with JSON.parse() before saving them to your `package.json`.

Not supported by all npm commands.


#### `pack-destination`

- Default: "."
- Type: String

Directory in which `npm pack` will save tarballs.


#### `workspace`

- Default:
- Type: String (can be set multiple times)

Enable running a command in the context of the configured workspaces of the current project while filtering by running only the workspaces defined by this configuration option.

Valid values for the `workspace` config are either:

- Workspace names
- Path to a workspace directory
- Path to a parent workspace directory (will result to selecting all of the nested workspaces)

When set for the `npm init` command, this may be set to the folder of a workspace which does not yet exist, to create the folder and set it up as a brand new workspace within the project.

This value is not exported to the environment for child processes.


#### `workspaces`

- Default: false
- Type: Boolean

Enable running a command in the context of **all** the configured workspaces.

This value is not exported to the environment for child processes.



### Description

For anything that's installable (that is, a package folder, tarball, tarball url, git url, name@tag, name@version, name, or scoped name), this command will fetch it to the cache, copy the tarball to the current working directory as `<name>-<version>.tgz`, and then write the filenames out to stdout.

If the same package is specified multiple times, then the file will be overwritten the second time.

If no arguments are supplied, then npm packs the current package folder.

### See Also

- [npm-packlist package](http://npm.im/npm-packlist)
- [npm cache](/cli/v7/commands/npm-cache)
- [npm publish](/cli/v7/commands/npm-publish)
- [npm config](/cli/v7/commands/npm-config)
- [npmrc](/cli/v7/configuring-npm/npmrc)
